# PoetryBot2000

./: CMakeLists.txt  FilePrinter.cpp  FilePrinter.h  Parser.cpp  Parser.h  PrettyPrinter.cpp  PrettyPrinter.h  README.md  RawTextParser.cpp  RawTextParser.h  TestText1.txt  TestText2.txt  Word.cpp  Word.h  WordVector.cpp  WordVector.h  main.cpp
ArgumentParsing/: ArgParser.cpp  ArgParser.h  Options.cpp  Options.h
Printing/: FilePrinter.h  PrettyPrinter.h
TextParsing/: ParsedTextParser.cpp  ParsedTextParser.h  Parser.h  RawTextParser.cpp  RawTextParser.h
